log/build_2026-04-01_17-56-17/turtle_spiral/stderr.log
  File "/home/tejasarjuna/Learning_phase/install/turtle_spiral/lib/python3.10/site-packages/turtle_spiral/turtle_spiral.py", line 21
    self.pub.publisher(msg.linear.x=self.x,msg.angular.z=self.z)
                       ^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?

